--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,13 +29,27 @@ jobs:
         with:
           node-version: 20
           cache: 'npm'
-      
-      - name: Install dependencies
+        - name: Install dependencies
         run: npm install
       
-      - name: Setup database
+      - name: Setup SQLite and initialize database
         run: |
-          npm run db:reset
+          sudo apt-get update
+          sudo apt-get install -y sqlite3
+          npm run db:init
+      
+      - name: Import data
+        run: |
+          npm run db:seed
+        env:
+          NODE_OPTIONS: --loader ts-node/esm
+      
+      - name: Export data to JSON
+        run: |
+          mkdir -p public/data
+          npm run export-data
+        env:
+          NODE_OPTIONS: --loader ts-node/esm
       
       - name: Build
         run: npm run build
