--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,9 +21,11 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '20'
-          cache: 'npm'      - name: Install dependencies
-        run: npm ci
+          cache: 'npm'
 
+      - name: Install dependencies
+        run: npm ci      
+      
       - name: Install SQLite
         run: |
           sudo apt-get update
